--- a/index.html
+++ b/index.html
@@ -19,8 +19,51 @@
     <div class="column column-left avt"></div>
     <div class="column column-center">
       <h1 class="logo title">Drive Casino</h1><h2 class="sub-title">Испытай удачу!</h2>
-      <div class="slider"></div>
-      <div class="play"><a href="#" class="button play-btn">играть сейчас</a></div>
+
+        <div id="content-slider">
+            <div class="slider">
+                <div class="mask">
+
+                 <section id="first" class="firstanimation">
+                  <h3>Мобильная версия</h3>
+                  <p>
+                  Далеко-далеко за словесными горами в стране
+                  </section>
+
+                  <section id="second" class="secondanimation">
+                  <h3>Призы</h3>
+                  <p>
+                   Lorem ipsum.
+                  </p>
+                  </section>
+
+                  <section id="third" class="thirdanimation">
+                    <h3>Все хорошо</h3>
+                    <p>
+                     Lorem ipsum.
+                    </p>
+                  </section>
+
+                  <section id="fourth" class="fourthanimation">
+                    <h3>Призы</h3>
+                    <p>
+                     гласных и согласных живут рыбные тексты.
+                    </p>
+                  </section>
+
+                  <section id="fifth" class="fifthanimation">
+                    <h3>Раздаем бонусы</h3>
+                    <p>
+                     Вопроса рыбного, рот щеке, предупреждал запятой
+                    </p>
+                  </section>
+                  </div>
+              </div>
+          </div>
+
+      <div class="play">
+        <a href="#" class="button play-btn">играть сейчас</a>        
+      </div>
     </div>
     <div class="column column-right avt"></div>
   </header>
