games block added

--- a/index.html
+++ b/index.html
@@ -62,11 +62,64 @@
           </div>
 
       <div class="play">
-        <a href="#" class="button play-btn">играть сейчас</a>        
+        <a href="#" class="button play-btn">играть сейчас</a>
       </div>
     </div>
     <div class="column column-right avt"></div>
   </header>
+
+  <div class="games flex">
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+    <section class="game">
+     <a href="#">
+      <img src="img/game.png" alt="gameName" class="game-preview">
+      <h6>Sizzling Hot 7</h6>
+     </a>
+    </section>
+
+  </div>
 
 
 
