games block fixed

--- a/index.html
+++ b/index.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-<body>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-<!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
 <title>Drive Casino</title>
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
+<!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 </head>
-
+<body>
 <div class="wrapper">
   <div class="container">
-  <main role="main">
+  <main>
   <header class="main-header flex">
     <div class="column column-left avt"></div>
     <div class="column column-center">
-      <h1 class="logo title">Drive Casino</h1><h2 class="sub-title">Испытай удачу!</h2>
+      <a href="#">
+        <h1 class="logo title">Drive Casino</h1>
+      </a>
+      <h2 class="sub-title">Испытай удачу!</h2>
 
         <div id="content-slider">
             <div class="slider">
@@ -69,58 +71,82 @@
   </header>
 
   <div class="games flex">
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-    <section class="game">
-     <a href="#">
-      <img src="img/game.png" alt="gameName" class="game-preview">
-      <h6>Sizzling Hot 7</h6>
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
+    <figure class="game">
+     <a href="#" class="game-preview">
+      <img src="img/game.png" alt="gameName">
+      <span class="game-play">
+        <span class="game-play-btn">играть</span>
+      </span>
      </a>
-    </section>
-
+      <figcaption class="game-title">Sizzling Hot 7</figcaption>
+    </figure>
   </div>
 
+
+  <div class=""></div>
 
 
   </main>
