comments block fixed

--- a/index.html
+++ b/index.html
@@ -146,7 +146,35 @@
   </div>
 
 
-  <div class=""></div>
+  <section class="comments">
+    <h2 class="sub-title">Отзывы игроков</h2>
+
+    <article class="comment">
+      <p class="comment-content">DriveCasino - мой любимый игровой клуб!</p>
+      <p class="comment-name">Pave***</p>
+    </article>
+
+    <article class="comment">
+      <p class="comment-content">Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Свое ты безорфографичный они за знаках раз переулка рукописи, речью лучше жаренные на берегу ведущими точках большой, вскоре первую власти родного.</p>
+      <p class="comment-name">DNJT***</p>
+    </article>
+
+    <article class="comment">
+      <p class="comment-content">Отличное казино, всем рекомендую</p>
+      <p class="comment-name">Lady***</p>
+    </article>
+
+    <article class="comment">
+      <p class="comment-content">DriveCasino - мой любимый игровой клуб!</p>
+      <p class="comment-name">01PTRio***</p>
+    </article>
+  </section>
+
+
+
+  <section class="benefits">
+    <h2 class="sub-title">Наши преимущества</h2>
+  </section>
 
 
   </main>
