benefits block added, btn added

--- a/index.html
+++ b/index.html
@@ -174,7 +174,47 @@
 
   <section class="benefits">
     <h2 class="sub-title">Наши преимущества</h2>
+
+    <div class="benefits-content flex">
+    <section class="benefit">
+      <figure>
+        <img src="img/jackpot.png" alt="jackpot">
+        <figcaption class="benefit-title">Огромные  прогрессивные  джекпоты!</figcaption>
+      </figure>
+    </section>
+
+    <section class="benefit">
+      <figure>
+        <img src="img/payment.png" alt="payment">
+        <figcaption class="benefit-title">15 платёжных  систем</figcaption>
+      </figure>
+    </section>
+
+    <section class="benefit">
+      <figure>
+        <img src="img/help.png" alt="help">
+        <figcaption class="benefit-title">Служба  поддержки 24/7</figcaption>
+      </figure>
+    </section>
+
+    <section class="benefit">
+      <figure>
+        <img src="img/casino.png" alt="casino">
+        <figcaption class="benefit-title">Живое казино</figcaption>
+      </figure>
+    </section>
+
+    <section class="benefit">
+      <figure>
+        <img src="img/mobile.png" alt="mobile">
+        <figcaption class="benefit-title">Мобильная версия казино</figcaption>
+      </figure>
+    </section>
+    </div>
   </section>
+
+
+  <div class="bottom-btn"><a href="#" class="button play-btn">играть сейчас</a></div>
 
 
   </main>
