--- a/index.html
+++ b/index.html
@@ -221,9 +221,14 @@
 
 
 <footer></footer>
+
+<a href="#" id="return-to-top">Наверх</i></a>
+
 </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
