--- a/index.html
+++ b/index.html
@@ -220,9 +220,27 @@
   </main>
 
 
-<footer></footer>
+<footer>
+  <div class="footer-wrapper partners flex">
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+  </div>
+</footer>
 
-<a href="#" id="return-to-top">Наверх</i></a>
+<a href="#" id="to-top">Наверх</i></a>
 
 </div>
 </div>
