play-btn fixed, footer fixed

--- a/index.html
+++ b/index.html
@@ -213,30 +213,28 @@
     </div>
   </section>
 
-
-  <div class="bottom-btn"><a href="#" class="button play-btn">играть сейчас</a></div>
-
-
+  <div class="bottom-btn">
+    <a href="#" class="button play-btn">играть сейчас</a>    
+  </div>
   </main>
-
 
 <footer>
   <div class="footer-wrapper partners flex">
     <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_02.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_03.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_04.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_05.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_06.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_07.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_08.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_09.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_10.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_11.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_12.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_13.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_14.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_15.png" alt="yandex"></div>
   </div>
 </footer>
 
