--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="column column-right avt"></div>
   </header>
 
-  <div class="games flex">
+  <section class="games flex">
     <figure class="game">
      <a href="#" class="game-preview">
       <img src="img/game.png" alt="gameName">
@@ -143,7 +143,7 @@
      </a>
       <figcaption class="game-title">Sizzling Hot 7</figcaption>
     </figure>
-  </div>
+  </section>
 
 
   <section class="comments">
@@ -169,8 +169,6 @@
       <p class="comment-name">01PTRio***</p>
     </article>
   </section>
-
-
 
   <section class="benefits">
     <h2 class="sub-title">Наши преимущества</h2>
@@ -213,28 +211,28 @@
     </div>
   </section>
 
-  <div class="bottom-btn">
-    <a href="#" class="button play-btn">играть сейчас</a>    
-  </div>
+  <section class="bottom-btn">
+    <a href="#" class="button play-btn">играть сейчас</a>
+  </section>
   </main>
 
 <footer>
   <div class="footer-wrapper partners flex">
     <div class="partner"><img src="img/payiron_01.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_02.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_03.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_04.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_05.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_06.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_07.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_08.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_09.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_10.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_11.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_12.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_13.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_14.png" alt="yandex"></div>
-    <div class="partner"><img src="img/payiron_15.png" alt="yandex"></div>
+    <div class="partner"><img src="img/payiron_02.png" alt="cards"></div>
+    <div class="partner"><img src="img/payiron_03.png" alt="wm"></div>
+    <div class="partner"><img src="img/payiron_04.png" alt="visa"></div>
+    <div class="partner"><img src="img/payiron_05.png" alt="tele2"></div>
+    <div class="partner"><img src="img/payiron_06.png" alt="beeline"></div>
+    <div class="partner"><img src="img/payiron_07.png" alt="megafon"></div>
+    <div class="partner"><img src="img/payiron_08.png" alt="mts"></div>
+    <div class="partner"><img src="img/payiron_09.png" alt="pm"></div>
+    <div class="partner"><img src="img/payiron_10.png" alt="alfa"></div>
+    <div class="partner"><img src="img/payiron_11.png" alt="ii"></div>
+    <div class="partner"><img src="img/payiron_12.png" alt="moneta"></div>
+    <div class="partner"><img src="img/payiron_13.png" alt="interkassa"></div>
+    <div class="partner"><img src="img/payiron_14.png" alt="payeer"></div>
+    <div class="partner"><img src="img/payiron_15.png" alt="okpay"></div>
   </div>
 </footer>
 
